# hstoys

./: CHANGELOG.md  hstoys.cabal
app/741/: A.hs  B-gen.c  B.hs  B.input  C.hs  C.input  D1.hs  D1.input  D2.hs  E.hs  F.hs  Ftest.c  checkF.sh
src/opt/: Opt.hs
tests/opt/: OptTest.hs
