cabal-version:      2.4
name:               hstoys
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alexey Ozeritskiy
maintainer:         aozeritsky@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

common base-properties
    build-depends:
        base ^>=4.15.1.0,
        bytestring,
        array,
        containers
    default-language: Haskell2010

common app-properties
    import: base-properties
    default-language: Haskell2010
    hs-source-dirs:   app

library opt
    import: base-properties
    exposed-modules:  Opt
    hs-source-dirs:   src/opt

test-suite opt-tests
    import: base-properties
    type: exitcode-stdio-1.0
    build-depends: HUnit ^>=1.6, opt
    main-is: OptTest.hs
    hs-source-dirs: tests/opt

executable hstoys
    import: app-properties
    main-is:          Main.hs
    build-depends:
        hstoys

executable 741_A
    import: app-properties
    main-is: 741/A.hs

executable 741_B
    import: app-properties
    main-is: 741/B.hs

executable 741_C
    import: app-properties
    main-is: 741/C.hs

executable 741_D1
    import: app-properties
    main-is: 741/D1.hs

executable 741_D2
    import: app-properties
    main-is: 741/D2.hs

executable 741_E
    import: app-properties
    main-is: 741/E.hs

executable 741_F
    import: app-properties
    main-is: 741/F.hs
